// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";
import "istio.io/api/networking/v1alpha3/gateway.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/api/core/v1/generated.proto";
import "kratos/api/annotations.proto";
import "google/api/annotations.proto";
package cratos.api.v1.gateway;
option go_package = "github.com/realotz/cratos/api/v1/gateway;gateway";
option java_multiple_files = true;
option java_package = "com.github.api.v1.gateway";
option java_outer_classname = "GatewayProto";

service Gateways {
  // gateway列表
  rpc List(ListOption) returns(GatewayList){
    option (google.api.http) = {
      get:"/cratos.api.v1.Gateway/List"
    };
  };
  // 获取gateway
  rpc Get(GetKind) returns(Gateway){
    option (google.api.http) = {
      get:"/cratos.api.v1.Gateway/Get"
    };
  };

  // 创建 Gateway
  rpc Create(Gateway) returns(Response){
    option (google.api.http) = {
      post:"/cratos.api.v1.Gateway/Create"
      body:"*"
    };
  };
  // 更新 Gateway
  rpc Update(Gateway) returns(Response){
    option (google.api.http) = {
      post:"/cratos.api.v1.Gateway/Update"
      body:"*"
    };
  };
  // 删除gateway
  rpc Delete(DeleteKind) returns(Response){
    option (google.api.http) = {
      delete:"/cratos.api.v1.Gateway/Delete"
    };
  };
}

message ListOption{
  int64 limit = 1;
  int64 Offset = 2;
  string sort = 3;
  string name = 4;
  string namespace = 5;
}

message GatewayList{
  repeated Gateway list = 1;
  int64 total=2;
}

message Gateway{
  string apiVersion = 1;
  string kind = 2;
  istio.networking.v1alpha3.Gateway spec = 3;
  k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 4;
}

enum Status {
  option (kratos.api.errors) = true;
  NotName = 0;
  NotNamespace = 1;
}

message GetKind{
  string name = 1;
  string namespace = 2;
  string version = 3;
}

message DeleteKind{
  string name = 1;
  string namespace = 2;
}

message Request{}

message Response{}